--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
               <br>
               
             </p>
-             <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1">kristan.ganaden@gmail.com</a>
+             <p><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1">kristan.ganaden@gmail.com</a></p>
           </div>
         </div>
       </div>
