--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta
+      property="og:image"
+      content="logo-removebg-preview"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -514,12 +522,12 @@
         <div class="footer-text">
           <div class="footer-title fs-2">
             <img
-            src="./images/logo-removebg-preview.png"
-            width="100"
-            height="100"
-            class="d-inline-block align-center"
-            alt=""
-          />
+              src="./images/logo-removebg-preview.png"
+              width="100"
+              height="100"
+              class="d-inline-block align-center"
+              alt=""
+            />
             <p>Kristan Ganaden</p>
           </div>
           <div class="footer-body fs-5 text-white-50">
@@ -528,10 +536,14 @@
               <br />
               DM10 Jaro St. Brgy. San Roque Cainta, Rizal 1900 <br />
               656-73-60/+639495806557
-              <br>
-              
+              <br />
             </p>
-             <p><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1">kristan.ganaden@gmail.com</a></p>
+            <p>
+              <a
+                href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1"
+                >kristan.ganaden@gmail.com</a
+              >
+            </p>
           </div>
         </div>
       </div>
