--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="icon" href="./images/logo-removebg-preview.png">
+    <link rel="icon" href="./images/favicon-32x32.png">
     <title>KG: Kristan Ganaden</title>
   </head>
   <body>
