--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,7 +12,15 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="icon" href="./images/favicon-32x32.png">
+    <link rel="icon" href="./images/favicon-32x32.png" />
+
+    <!-- For Facebook -->
+    <meta property="og:title" content="KG - Kristan Ganaden" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="./images/logo-removebg-preview.png" />
+    <meta property="og:url" content="https://aceboy76.github.io/Kristan-Website/" />
+    <meta property="og:description" content="A Website About Kristan" />
+
     <title>KG: Kristan Ganaden</title>
   </head>
   <body>
@@ -516,12 +524,12 @@
         <div class="footer-text">
           <div class="footer-title fs-2">
             <img
-            src="./images/logo-removebg-preview.png"
-            width="100"
-            height="100"
-            class="d-inline-block align-center"
-            alt=""
-          />
+              src="./images/logo-removebg-preview.png"
+              width="100"
+              height="100"
+              class="d-inline-block align-center"
+              alt=""
+            />
             <p>Kristan Ganaden</p>
           </div>
           <div class="footer-body fs-5 text-white-50">
@@ -530,10 +538,14 @@
               <br />
               DM10 Jaro St. Brgy. San Roque Cainta, Rizal 1900 <br />
               656-73-60/+639495806557
-              <br>
-              
+              <br />
             </p>
-             <p><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1">kristan.ganaden@gmail.com</a></p>
+            <p>
+              <a
+                href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristan.ganaden@gmail.com&tf=1"
+                >kristan.ganaden@gmail.com</a
+              >
+            </p>
           </div>
         </div>
       </div>
