--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="icon" href="./images/favicon-32x32.png" />
 
-    <!-- For Facebook -->
-    <meta property="og:title" content="KG - Kristan Ganaden" />
-    <meta property="og:type" content="article" />
-    <meta property="og:image" content="./images/logo-removebg-preview.png" />
+    <meta property="og:title" content="Your Website Title" />
+    <meta
+      property="og:description"
+      content="A website about kristan ganaden."
+    />
+    <meta property="og:image" content="https://aceboy76.github.io/Kristan-Website/images/logo-removebg-preview.png">
     <meta property="og:url" content="https://aceboy76.github.io/Kristan-Website/" />
-    <meta property="og:description" content="A Website About Kristan" />
-
+    <meta name="og:site_name" content="KG _ Kristan Ganaden" />
+    <meta property="og:type" content="website" />
     <title>KG: Kristan Ganaden</title>
   </head>
   <body>
