--- a/index.html
+++ b/index.html
@@ -12,31 +12,22 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-   
-    <title>KG: Kristan Ganaden</title>
-    <link rel="icon" href="./images/favicon-32x32.png" />
+    <link rel="icon" href="images/favicon v2.png" />
 
-    <meta property="og:title" content="Kristan Ganaden" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aceboy76.github.io/Kristan-Website/" />
-    <meta
-      property="og:description"
-      content="A website about kristan ganaden."
-    />
-    <meta property="og:image" content="images/logo-removebg-preview.png">
+    <title>Kristan G</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 mb-4">
       <div class="container-fluid ms-4">
         <a class="navbar-brand fs-2" href="#">
           <img
-            src="./images/logo-removebg-preview.png"
+            src="./images/logo.png"
             width="100"
             height="100"
             class="d-inline-block align-center"
             alt="logo"
           />
-          Kristan Ganaden
+          Kristan G
         </a>
         <button
           class="navbar-toggler"
@@ -526,13 +517,13 @@
         <div class="footer-text">
           <div class="footer-title fs-2">
             <img
-              src="./images/logo-removebg-preview.png"
+              src="./images/logo.png"
               width="100"
               height="100"
               class="d-inline-block align-center"
               alt=""
             />
-            <p>Kristan Ganaden</p>
+            <p class="brand-name">Kristan G</p>
           </div>
           <div class="footer-body fs-5 text-white-50">
             <p>
