--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Kristan G</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3 mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
       <div class="container-fluid ms-4">
         <a class="navbar-brand fs-2" href="#">
           <img
@@ -33,8 +33,8 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
